--- a/Update/updateCat.html
+++ b/Update/updateCat.html
@@ -102,13 +102,13 @@
     <div id="UpdateCatFunc" class="container">
         <form id="formUpdateCategory">
             <h3 id="catID">Category ID</h3>
-            <label> Category Name: </label> <br />
-            <input type="text" id="txtCatName" name="catName" required="required"> <br /> <br />
+            <label> Category Name </label> <br />
+            <input type="text" class="form-control text" id="txtCatName" name="catName" placeholder="Enter Category" required="required"> <br /> <br />
 
-            <label> Description: </label> <br />
-            <input type="text" id="txtCatDesc" name="catDesc" required="required"> <br /> <br />
+            <label> Description </label> <br />
+            <input type="text" class="form-control text" id="txtCatDesc" name="catDesc" placeholder="Description" required="required"> <br /> <br />
 
-            <input type="submit" id="btnUpdateCategory" value="Update">
+            <input type="submit" class="btn btn-primary" id="btnUpdateCategory" value="Update">
 
         </form>
     </div>
