--- a/Update/updateMap.html
+++ b/Update/updateMap.html
@@ -116,7 +116,7 @@
             <input type="submit" class="btn btn-primary" id="btnUpdateMarker" value="Update" style="display: inline-block;">
 
         </form>
-        <div id="mapInput" style="width: 750px; height: 450px; display: inline-block;"><br/>
+        <div id="mapView" style="width: 750px; height: 450px; display: inline-block;"><br/>
         </div>
     </div>
 
