--- a/Update/updateSubcat.html
+++ b/Update/updateSubcat.html
@@ -96,25 +96,25 @@
     </div>
 
     <div class="title">
-        <h1>Update Category</h1>
+        <h1>Update Subcategory</h1>
     </div>
 
     <div id="UpdateCatFunc" class="container">
         <form id="formUpdateCategory">
-            <h3 id="catID">Category ID</h3>
-            <label> Category Name </label> <br />
-            <input type="text" class="form-control text" id="txtSubcatName" name="catName" placeholder="Enter Category" required="required"> <br /> <br />
+            <h3 id="subcatID">Subcategory ID </h3>
+            <label> Subcategory Name </label> <br />
+            <input type="text" class="form-control text" id="txtSubcatName" name="subcatName" placeholder="Enter Subcategory" required="required"> <br />
 
             <label> Description </label> <br />
-            <input type="text" class="form-control text" id="txtCatDesc" name="catDesc" placeholder="Description" required="required"> <br /> <br />
+            <input type="text" class="form-control text" id="txtSubcatDesc" name="subcatDesc" placeholder="Description" required="required"> <br />
 
-            <input type="submit" class="btn btn-primary" id="btnUpdateCategory" value="Update">
+            <input type="submit" class="btn btn-primary" id="btnUpdateSubcategory" value="Update">
 
         </form>
     </div>
 
-    <script src="../js/UpdateFunc/updateCat.js"></script>
-    <script src="../js/UpdateFunc/updateCatDAO.js"></script>
+    <script src="../js/UpdateFunc/updateSubcat.js"></script>
+    <script src="../js/UpdateFunc/updateSubcatDAO.js"></script>
 
 </body>
 
