--- a/Login/crud.html
+++ b/Login/crud.html
@@ -132,7 +132,7 @@
             <form id="formAddSubcat">
                 <div>
                     <!--creates dropdown fed with categories from db-->
-                    <select id="AdminDrop1" required="required"></select>
+                    <select id="AdminDrop1" class="browser-default custom-select" required="required"></select>
                     <br />&nbsp;
                     <br />
                     <script>console.log("AdminDrop1 value: " + $("#AdminDrop1"))</script>
