--- a/Login/crud.html
+++ b/Login/crud.html
@@ -236,9 +236,9 @@
         <div id="markerList" class="container">
             <h2>Store Markers List</h2>
         </div>
-        <div id="mapView" style="width: 750px; height: 450px;">
+        <!-- <div id="mapView" style="width: 750px; height: 450px;">
             
-        </div>
+        </div> -->
     </div>
 
     <script src="../js/accordion.js"></script>
@@ -250,8 +250,8 @@
     <script src="../js/ListCat/initCompare.js"></script>
     <script src="../Map/InsertEvent.js"></script>
     <script src="../Map/InsertEventDAO.js"></script>
-    <script src="../Map/EventList/EventList.js"></script>
-    <script src="../Map/EventList/EventListDAO.js"></script>
+    <!-- <script src="../Map/EventList/EventList.js"></script>
+    <script src="../Map/EventList/EventListDAO.js"></script> -->
     <!-- <script src="../js/ListCat/adminCatList.js"></script> -->
     <!--<script src="../js/ListFunc/ListItems.js"></script>
     <script src="../js/ListFunc/ListItemsDAO.js"></script> -->
