--- a/Map/EventList/EventList.html
+++ b/Map/EventList/EventList.html
@@ -102,7 +102,7 @@
     <div class="title"><h1>Find Your Nearest Store</h1></div>
 
     <!--placeholder for Google Map, javascript loads map-->
-    <div id="mapInput" style="width: 750px; height: 450px;"></div>
+    <div id="mapView" style="width: 750px; height: 450px;"></div>
 
     <script src="./EventList.js"></script>
     <script src="./EventListDAO.js"></script>
