listitems set to work when watch fixed

--- a/WatchList/watch.html
+++ b/WatchList/watch.html
@@ -99,6 +99,13 @@
         <h1>Watchlist</h1>
     </div>
 
+    <div id="divItemList" class="container">
+
+    </div>
+
+    <script src="../js/ListFunc/ListItems.js"></script>
+    <script src="../js/ListFunc/ListItemsDAO.js"></script>
+
 </body>
 
 </html>
