comments/minor changes

--- a/CatTemplate/catTemplate.html
+++ b/CatTemplate/catTemplate.html
@@ -98,9 +98,11 @@
     <div class="title">
         <h1>Shop</h1>
     </div>
+    <!-- div for all categories, subcats and items -->
     <div id="divCatList" class="container">
     </div>
 
+    <!-- comparison div -->
     <div id="divCompare" class="title">
         <h1>Compare</h1>
     </div>
