--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -102,7 +102,7 @@
             <a href="mailto:shopping@store.com?Subject=Enquiry" target="_top">shopping@store.com</a>
         </p>
         <p>Or by popping into one of our stores<br/>
-            <a href="../Map/EventList/EventList.html">Find a store</a>
+            <a href="../Map/EventList/EventList.html">Find a store</a> <!-- link to store locator page -->
         </p>
 
     </div>
