--- a/Update/updateCat.html
+++ b/Update/updateCat.html
@@ -99,6 +99,7 @@
         <h1>Update Category</h1>
     </div>
 
+    <!-- update category form -->
     <div id="UpdateCatFunc" class="container">
         <form id="formUpdateCategory">
             <h3 id="catID">Category ID</h3>
