--- a/Update/updateSubcat.html
+++ b/Update/updateSubcat.html
@@ -99,6 +99,7 @@
         <h1>Update Subcategory</h1>
     </div>
 
+    <!-- update subcat form -->
     <div id="UpdateCatFunc" class="container">
         <form id="formUpdateCategory">
             <h3 id="subcatID">Subcategory ID </h3>
