--- a/Update/Update.html
+++ b/Update/Update.html
@@ -99,7 +99,8 @@
         <h1>Update Item </h1>
     </div>
 
-    <div id="UpdateFunc" class="container">
+    <!-- update form -->
+    <div id="UpdateFunc" class="container"> 
         <form id="formUpdateItem">
             <h3 id="itemID">Item ID</h3>
             <label> Item Name </label> <br>
