--- a/Update/updateMap.html
+++ b/Update/updateMap.html
@@ -104,6 +104,7 @@
         <h1>Update Map</h1>
     </div>
 
+    <!-- update map form -->
     <div id="UpdateMarkerFunc" class="container">
         <form id="formUpdateMarker">
             <h3 id="markerID">Store ID</h3>
