--- a/Update/updateSubcat.html
+++ b/Update/updateSubcat.html
@@ -100,8 +100,8 @@
     </div>
 
     <!-- update subcat form -->
-    <div id="UpdateCatFunc" class="container">
-        <form id="formUpdateCategory">
+    <div id="UpdateSubcatFunc" class="container">
+        <form id="formUpdateSubcategory">
             <h3 id="subcatID">Subcategory ID </h3>
             <label> Subcategory Name </label> <br />
             <input type="text" class="form-control text" id="txtSubcatName" name="subcatName" placeholder="Enter Subcategory" required="required"> <br />
