--- a/WatchList/watch.html
+++ b/WatchList/watch.html
@@ -23,7 +23,7 @@
     <script src="../js/lib/indexeddb.js"></script>
 
     <!--title of site-->
-    <title>Catalogue Website Shop</title>
+    <title>Catalogue Website Watchlist</title>
 
 </head>
 
@@ -97,6 +97,10 @@
 
     <div class="title">
         <h1>Watchlist</h1>
+    </div>
+
+    <div id="divEmpty">
+        <h5>Your watchlist is empty</h5>
     </div>
 
     <div id="divItemList" class="container">
