--- a/Search/results.html
+++ b/Search/results.html
@@ -23,7 +23,7 @@
     <script src="../js/lib/indexeddb.js"></script>
 
     <!--title of site-->
-    <title>Catalogue Website Search Results</title>
+    <title>Catalogue Website Under Construction</title>
 
 </head>
 
