--- a/Login/crud.html
+++ b/Login/crud.html
@@ -225,9 +225,7 @@
         <div id="markerList" class="container">
             <h2>Store Markers List</h2>
         </div>
-        <!-- <div id="mapView" style="width: 750px; height: 450px;">
-            
-        </div> -->
+        <script src="../Map/listLocations.js"></script>
     </div>
 
     <script src="../js/accordion.js"></script>
@@ -239,6 +237,7 @@
     <script src="../js/ListCat/initCompare.js"></script>
     <script src="../Map/InsertEvent.js"></script>
     <script src="../Map/InsertEventDAO.js"></script>
+    
 
     <script>
         $("#AdminDrop").change(function (event) {
