--- a/Map/EventList/EventList.html
+++ b/Map/EventList/EventList.html
@@ -26,7 +26,7 @@
     <script src="../../js/lib/indexeddb.js"></script>
 
     <!--title of site-->
-    <title>Catalogue Website Shop</title>
+    <title>Catalogue Website Store Locator</title>
 
 </head>
 
