--- a/home/HomePage.html
+++ b/home/HomePage.html
@@ -98,33 +98,33 @@
 
     <!--creates carousel-->
     <div class="container mt-3">
-        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <div id="Carousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ul class="carousel-indicators">
-                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#myCarousel" data-slide-to="1"></li>
-                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#Carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#Carousel" data-slide-to="1"></li>
+                <li data-target="#Carousel" data-slide-to="2"></li>
             </ul>
 
             <!-- The slideshow -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <!--location of specific image with description for accessibility purposes and sizes-->
-                    <img src="../images/Misc/mountain1.jpg" alt="Lake" width="550" height="250">
+                    <img src="../images/pc.jpeg" alt="pc" width="200" height="400">
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Misc/mountain2.jpg" alt="Canyon" width="550" height="250">
+                    <img src="../images/laptop.jpg" alt="laptop" width="200" height="400">
                 </div>
                 <div class="carousel-item">
-                    <img src="../images/Misc/mountain3.jpg" alt="Alps" width="550" height="250">
+                    <img src="../images/ghome.jpeg" alt="google home" width="200" height="400">
                 </div>
             </div>
 
             <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+            <a class="carousel-control-prev" href="#Carousel" data-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </a>
-            <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+            <a class="carousel-control-next" href="#Carousel" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
         </div>
